5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1836_1276.log
== TEST (2019-06-27 10:53:41) 
-- CODE:
from numy import *

mat = array(eval(input())
				
dias = zeros(shape(mat)[1], dtype = int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 5
    dias = zeros(shape(mat)[1], dtype = int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:53:58) 
-- CODE:
from numy import *

mat = array(eval(input())
				
dias = zeros(shape(mat[1]), dtype = int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 5
    dias = zeros(shape(mat[1]), dtype = int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:54:09) 
-- CODE:
from numy import *

mat = array(eval(input())
				
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 5
    dias = zeros(shape(mat[1]), dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:56:36) 
-- CODE:
from numy import *

mat = array(eval(input())
dias = zeros(shape(mat)[1], dtype = int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 4
    dias = zeros(shape(mat)[1], dtype = int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:56:51) 
-- CODE:
from numy import *

mat = array(eval(input())
dias = zeros(shape(mat)[1], dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 4
    dias = zeros(shape(mat)[1], dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:57:10) 
-- CODE:
from numy import *

mat = array(eval(input())
dias = zeros((shape(mat)[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
File "XXXX", line 4
    dias = zeros((shape(mat)[1]), dtype=int)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:57:29) 
-- CODE:
from numy import *

mat = array(eval(input()))
dias = zeros(shape(mat)[1], dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numy import *
ModuleNotFoundError: No module named 'numy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:57:47) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat)[1], dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:58:58) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:59:07) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:59:45) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:00:01) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:34:08) 
-- CODE:
from numpy import *

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 23:43:36) 
-- CODE:
from numpy import *
from numpy.linalg import*

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 23:43:42) 
-- CODE:
from numpy import *
from numpy.linalg import*

mat = array(eval(input()))
dias = zeros(shape(mat[1]), dtype=int)
				
for i in range(shape(mat)[1]):
	dias[i] = sum(mat[:, i])
		
for i in range(size(dias)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- EXECUTION TIME:
1.16869
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
